# MathLibrary

./: .gitignore  CMakeLists.txt
Color/: CMakeLists.txt
Color/Include/: Color.h
Color/Include/TColor/: ColorBase.h  TColor.h  TRGB.h  TRGBA.h
Common/: CMakeLists.txt
Common/Include/: TLinearOperator.h
Doc/: CMakeLists.txt  Doxyfile.in
Include/Math/: Color.h  Math.h  Vector.h
Include/Math/TColor/: ColorBase-inl.h  ColorBase.h  ColorData.h  TRGB-inl.h  TRGB.h  TRGBA-inl.h  TRGBA.h
Include/Math/TMatrix/: MatrixBase.h
Include/Math/TVector/: Vector2-inl.h  Vector2.h  Vector3-inl.h  Vector3.h  Vector4-inl.h  Vector4.h  VectorBase-inl.h  VectorBase.h  VectorData.h
Math/Include/: MathUtil.h
Matrix/: CMakeLists.txt
Matrix/Include/: Matrix.h
Matrix/Include/TMatrix/: MatrixBase.h  MatrixData.h
SIMD/Include/: SIMD.h
Src/Math/TVector/: Vector2.cpp  Vector3.cpp  VectorBase.cpp
Test/: CMakeLists.txt  test.cpp  test1.cpp
Test/VectorTest/: Vector2fTest.cpp  Vector3fTest.cpp  Vector4fTest.cpp
Vector/: CMakeLists.txt
Vector/Include/: Vector.h
Vector/Include/TVector/: Vector3.h  VectorBase.h  VectorData.h
